apps/taskchampion/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: taskchampion
spec: {}
status: {}
