apps/taskchampion/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: taskchampion
  name: taskchampion
  namespace: taskchampion
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: taskchampion
  template:
    metadata:
      labels:
        app.kubernetes.io/name: taskchampion
    spec:
      containers:
        - env:
            - name: RUST_LOG
              value: "debug"
          image: ghcr.io/gothenburgbitfactory/taskchampion-sync-server:0.6.1
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - wget
                - --spider
                - --quiet
                - --tries=1
                - --timeout=2
                - http://127.0.0.1:8080/
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: taskchampion
          ports:
            - containerPort: 8080
              name: taskchampion
              protocol: TCP
          readinessProbe:
            exec:
              command:
                - wget
                - --spider
                - --quiet
                - --tries=1
                - --timeout=2
                - http://127.0.0.1:8080/
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
