apps/taskchampion/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: primary
    app.kubernetes.io/name: taskchampion
  name: taskchampion
  namespace: taskchampion
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: taskchampion
      port: 8080
      protocol: TCP
      targetPort: taskchampion
  selector:
    app.kubernetes.io/name: taskchampion
  sessionAffinity: None
  type: ClusterIP
